computer img width for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ justify-content: space-evenly;
   
   }
   img.computer.responsive-img{
-    width: 100% !important;
+    width: 316px !important;
     margin: 0px !important; 
     margin-left: 40px !important;
   }
